# localization_switcher

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: managed_nodes.yaml  state_graph.yaml  switch_point.yaml
docs/: imple.md  uml.pu
include/localization_switcher/: common_types.hpp  graph.hpp  localization_switcher_component.hpp  localization_switcher_node.hpp  locallization_swithcer_component.hpp  node.hpp  strategy.hpp
include/localization_switcher/internal/: graph_builder.hpp  transition_decider.hpp
include/localization_switcher/lib/: graph.hpp  node.hpp
src/: graph.cpp  localization_switcher.cpp  localization_switcher_component copy.cpp  localization_switcher_component.cpp  localization_switcher_node.cpp  node.cpp  strategy.cpp
src/internal/: graph_builder.cpp  transition_decider.cpp  trantision_decider.cpp
src/lib/: graph.cpp  node.cpp
